--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Welcome to Hot Beans Web</h1>
         <nav>
             <ul>
-                <li><a href="#company-profile">Company Profile</a></li>
-                <li><a href="#trainee-profiles">Trainee Profiles</a></li>
-                <li><a href="#job-specifications">Job Specifications</a></li>
-                <li><a href="#application-form">Apply Now</a></li>
-                <li><a href="#courses">Web Development Courses</a></li>
+                <li><a href="companyprofile.html">Company Profile</a></li>
+                <li><a href="traineeprofile.html">Trainee Profiles</a></li>
+                <li><a href="jobspec.html">Job Specifications</a></li>
+                <li><a href="applicationform.html">Apply Now</a></li>
+                <li><a href="courses.html">Web Development Courses</a></li>
             </ul>
         </nav>
     </header>
