--- a/traineeprofile.html
+++ b/traineeprofile.html
@@ -41,7 +41,7 @@
         <div class="trainee">
             <h3>Daniel Lecroy</h3>
             <div class="container">
-                <img src="images/Daniel_Lecroy.jpg" alt="Daniel Lecroy" width="150" height="150">
+                <img src="Images/Daniel_Lecroy.jpg" alt="Daniel Lecroy" width="150" height="150">
                 <p>I'm Daniel and probably not the typical designer positioned behind an Illustrator artboard adjusting pixels, but I design.
                     Immersed in stylesheets tweaking font sizes and contemplating layouts is where you'll find me (~_^).
                     I'm committed to creating fluent user experiences while staying fashionable.
