--- a/traineeprofile.html
+++ b/traineeprofile.html
@@ -59,7 +59,7 @@
         <div class="trainee">
             <h3>Li Chang</h3>
             <div class="container">
-                <img src="images/Li Chang.PNG" alt="Li Chang" width="150" height="150">
+                <img src="Images/Li Chang.PNG" alt="Li Chang" width="150" height="150">
                 <p>Hello! My name is Li and I enjoy creating things that live on the internet. 
 
                     I decided on this career as I grew up with a heavy influence from my father who ran his own software house, and I got an insight into what it's like to work in the tech industry. My father would always hype about how learning to program or by 'speaking the computer's language', he could type a few lines of code and tell the computer to do whatever he wanted it to do and that just blew my then curious and budding little mind.
@@ -83,7 +83,7 @@
         <div class="trainee">
             <h3>Rosa DeCastello</h3>
             <div class="container">
-                <img src="images/Rosa_DeCastello.jpg" alt="Rosa DeCastello" width="150" height="150">
+                <img src="Images/Rosa_DeCastello.jpg" alt="Rosa DeCastello" width="150" height="150">
                 <p>Hi I'm Rosa and I have a real passion for Creative design, I'm never happier than when I'm pushing the envelope of what can be done with HTML and CSS
 
                     I came into web design from an art background but soon realised that I needed to develop my technical skills as well. So I did a lot of online courses that pushed what I know, then used the support and experience of my colleagues to hone my skills.
