--- a/applicationform.html
+++ b/applicationform.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo" width="70" height="70"></a>
-            <a class="navbar-brand" href="#">Hot Beans Web</a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" width="70" height="70"></a>
+            <a class="navbar-brand" href="index.html">Hot Beans Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
