--- a/courses.html
+++ b/courses.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Hot Beans Web</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" width="70" height="70"></a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
+            </a>
             <a class="navbar-brand" href="index.html">Hot Beans Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,14 +38,17 @@
             </div>
         </nav>
     </header>
-    <section id="courses">
-        <h2>Web Development Courses</h2>
-        <ul>
-            <li><a href="https://www.coursera.org/specializations/web-design" target="_blank">Web Design for Everybody (Coursera)</a></li>
-            <li><a href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd0011" target="_blank">Front-End Web Developer Nanodegree (Udacity)</a></li>
-            <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank">Web Development Career Path (Codecademy)</a></li>
-        </ul>
-    </section>
+
+    <main class="container my-4">
+        <section id="courses">
+            <h2>Web Development Courses</h2>
+            <ul>
+                <li><a href="https://www.coursera.org/specializations/web-design" target="_blank">Web Design for Everybody (Coursera)</a></li>
+                <li><a href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd0011" target="_blank">Front-End Web Developer Nanodegree (Udacity)</a></li>
+                <li><a href="https://www.codecademy.com/learn/paths/web-development" target="_blank">Web Development Career Path (Codecademy)</a></li>
+            </ul>
+        </section>
+    </main>
 
     <footer class="bg-light text-center mt-4 p-3">
         <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
@@ -51,4 +57,5 @@
     <script src="script.js"></script>
 </body>
 </html>
-</body>
+```
+
