--- a/applicationform.html
+++ b/applicationform.html
@@ -1,3 +1,15 @@
+Your HTML structure for the "Join Hot Beans Web" page with an online application form is well-organized. However, there are a few improvements that can enhance its usability, accessibility, and overall design. Below are some suggestions and an improved version of your HTML code:
+
+### Improvements:
+1. **Semantic HTML**: Use more semantic elements like `<main>` for the main content area.
+2. **Accessibility**: Ensure that all form elements have associated labels for better accessibility.
+3. **Form Validation**: Ensure that the JavaScript function `validateForm()` is defined in your `script.js` file.
+4. **Styling**: Ensure that the form elements are styled appropriately in your `styles.css` file for better user experience.
+5. **Consistent Structure**: Ensure that the structure is consistent and easy to follow.
+
+Here’s the improved version of your HTML code:
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +17,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Hot Beans Web</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" width="70" height="70"></a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
+            </a>
             <a class="navbar-brand" href="index.html">Hot Beans Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,19 +50,28 @@
             </div>
         </nav>
     </header>
-    <section id="application-form">
-        <h2>Online Application Form</h2>
-        <form id="applicationForm" onsubmit="return validateForm()">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="resume">Resume (URL):</label>
-            <input type="url" id="resume" name="resume" required>
-            <button type="submit">Submit Application</button>
-        </form>
-        <p id="formMessage"></p>
-    </section>
+
+    <main class="container my-4">
+        <section id="application-form">
+            <h2>Online Application Form</h2>
+            <form id="applicationForm" onsubmit="return validateForm()">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="resume">Resume (URL):</label>
+                    <input type="url" id="resume" name="resume" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit Application</button>
+            </form>
+            <p id="formMessage" class="mt-3"></p>
+        </section>
+    </main>
 
     <footer class="bg-light text-center mt-4 p-3">
         <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
@@ -55,3 +79,13 @@
 
     <script src="script.js"></script>
 </body>
+</html>
+```
+
+### Key Changes:
+- **Semantic Structure**: Wrapped the main content in a `<main>` tag for better semantics.
+- **Accessibility**: Ensured that all form elements have associated labels and added Bootstrap classes for better styling.
+- **Styling**: Added Bootstrap classes to form elements for improved styling and responsiveness.
+- **Consistent Structure**: Ensured the structure is consistent and easy to follow.
+
+This structure will help improve the overall quality of your HTML document, making it more accessible and user-friendly. Make sure to implement the `validateForm()` function in your `script.js` file to handle form validation.
