--- a/index.html
+++ b/index.html
@@ -5,18 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Hot Beans Web</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Hot Beans Web</h1>
-        <nav>
-            <ul>
-                <li><a href="companyprofile.html">Company Profile</a></li>
-                <li><a href="traineeprofile.html">Trainee Profiles</a></li>
-                <li><a href="jobspec.html">Job Specifications</a></li>
-                <li><a href="applicationform.html">Apply Now</a></li>
-                <li><a href="courses.html">Web Development Courses</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
+            </a>
+            <a class="navbar-brand" href="index.html">Hot Beans Web</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="companyprofile.html">Company Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="traineeprofile.html">Trainee Profiles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="jobspec.html">Job Specifications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="applicationform.html">Application Form</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="courses.html">Web Development Courses</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
 
