--- a/traineeprofile.html
+++ b/traineeprofile.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Hot Beans Web</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo" width="70" height="70"></a>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
+            </a>
             <a class="navbar-brand" href="index.html">Hot Beans Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
