--- a/courses.html
+++ b/courses.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
+                <img src="Images/logo.png" alt="Hot Beans Web Logo" width="70" height="70">
             </a>
             <a class="navbar-brand" href="index.html">Hot Beans Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
