--- a/jobspec.html
+++ b/jobspec.html
@@ -69,4 +69,13 @@
                 <li>Proficiency in Photoshop, Illustrator, or other visual design and wire-framing tools.</li>
                 <li>Proficiency in HTML, CSS, and JavaScript for rapid prototyping.</li>
                 <li>Experience working in an Agile/Scrum development process.</li>
+            </ul>
+        </section>
+
+    <footer class="bg-light text-center mt-4 p-3">
+        <p>&copy; 2025 Hot Beans Web. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
                
